Jolie - Adding some Monte Carlo stuff

--- a/references.bib
+++ b/references.bib
@@ -199,3 +199,12 @@
   year={2020},
   publisher={Sage Publications Sage CA: Los Angeles, CA}
 }
+@article{haddad2013applicability,
+  title={Applicability of Monte Carlo cross validation technique for model development and validation using generalised least squares regression},
+  author={Haddad, Khaled and Rahman, Ataur and Zaman, Mohammad A and Shrestha, Surendra},
+  journal={Journal of Hydrology},
+  volume={482},
+  pages={119--128},
+  year={2013},
+  publisher={Elsevier}
+}
