Adding reference for our data's article

--- a/references.bib
+++ b/references.bib
@@ -208,3 +208,12 @@
   year={2013},
   publisher={Elsevier}
 }
+@article{chicco2020machine,
+  title={Machine learning can predict survival of patients with heart failure from serum creatinine and ejection fraction alone},
+  author={Chicco, Davide and Jurman, Giuseppe},
+  journal={BMC medical informatics and decision making},
+  volume={20},
+  pages={1--16},
+  year={2020},
+  publisher={Springer}
+}
