--- a/index.qmd
+++ b/index.qmd
@@ -311,7 +311,8 @@ Leave-One-Out Cross-Validation[@james1980monte].
 This heart failure clinical records dataset, obtained via the UC Irvine
 Machine Learning Repository, contains the medical records of 299
 patients who had heart failure, collected during their follow-up period,
-where each patient profile has 13 clinical features.
+where each patient profile has 13 clinical features
+[@chicco2020machine].
 
 More specifically, the dataset comprises medical records of 299 heart
 failure patients from Faisalabad, Pakistan, collected between April and
@@ -600,23 +601,29 @@ collect_metrics(m2_MCCV)
 
 ## Conclusion
 
-This paper shows various cross-validation techniques that can be used for modeling validation, including single hold-out, 5 & 10 k-folds, leave-one-out, and Monte Carlo cross-validation.
+This paper shows various cross-validation techniques that can be used
+for modeling validation, including single hold-out, 5 & 10 k-folds,
+leave-one-out, and Monte Carlo cross-validation.
 
 While the researchers that provided the dataset found that survival of
 heart attack patients can be predicted using only serum creatinine and
-ejection fraction as predictor variables. The linear regression analysis we conducted using
-various cross-validation techniques has shown that the full model (which
-includes all predictor variables within the dataset) has a lower mean
-squared error (MSE) after testing. This essentially means the full model
-is more robust with predictive ability compared to the reduced model.
-That being said, the difference in MSEs between the two models is marginal, however, the
-full model by technicality does have slightly more predictive ability.
+ejection fraction as predictor variables. The linear regression analysis
+we conducted using various cross-validation techniques has shown that
+the full model (which includes all predictor variables within the
+dataset) has a lower mean squared error (MSE) after testing. This
+essentially means the full model is more robust with predictive ability
+compared to the reduced model. That being said, the difference in MSEs
+between the two models is marginal, however, the full model by
+technicality does have slightly more predictive ability.
 
 The marginal difference between models supports the argument made by the
 researchers because the model with two predictor variables and the model
-with twelve predictor variables produced small differences in MSEs
-as seen in the analysis above; models with less predictor variables are typically preferred in statistical analysis. 
+with twelve predictor variables produced small differences in MSEs as
+seen in the analysis above; models with less predictor variables are
+typically preferred in statistical analysis.
 
-Ultimately, while the k-folds CV technique (particularly 10 folds) seemed to perform the best, most of these techniques seem sufficient to help validate a model based on this example.
+Ultimately, while the k-folds CV technique (particularly 10 folds)
+seemed to perform the best, most of these techniques seem sufficient to
+help validate a model based on this example.
 
 ### References
