--- a/index.qmd
+++ b/index.qmd
@@ -435,8 +435,19 @@ boxplot(data$serum_sodium, main="Serum Sodium")
 boxplot(data$time, main="Time")
 ```
 
-#### Correlation
+Boxplots for our continuous variables were created in our exploratory
+analysis to evaluate if any variables have outlier that need to be
+addressed. The boxplots do indicate that some of our variables have
+potential outliers, namely creatinine phosphokinase, ejection fraction,
+platelets, serum creatinine, and serum sodium. However, these data
+points will remain untouched for our analysis. The indicated outlier do
+not appear to be recording errors, such as a negative time variable or
+unrealistic age. The outliers in the boxplots appear to be genuine
+observations and should be considered in our model. The original article
+also did not remove any outliers [@chicco2020machine.] 
 
+#### Correlation
+The majority of the variables do not appear to have a significant correlation to the other. The most significant was between the time variable and our target variable, death event. There's a negative relationship, meaning the patients who had more days in the follow-up period tended to survive through the end of the follow-up period. There was a slight positive correlation between sex of the patient and smoker status, meaning more male patients tended to be smokers than female patients.
 ```{r}
 cor(data) %>%
   corrplot(method = 'ellipse', type = 'upper')
