--- a/references.bib
+++ b/references.bib
@@ -217,3 +217,13 @@
   year={2020},
   publisher={Springer}
 }
+@article{wong2015performance,
+  title={Performance evaluation of classification algorithms by k-fold and leave-one-out cross validation},
+  author={Wong, Tzu-Tsung},
+  journal={Pattern recognition},
+  volume={48},
+  number={9},
+  pages={2839--2846},
+  year={2015},
+  publisher={Elsevier}
+}
