--- a/references.bib
+++ b/references.bib
@@ -227,3 +227,12 @@
   year={2015},
   publisher={Elsevier}
 }
+@article{santos2023statistical,
+  title={A statistical methodology for reliable evaluation of calibrated dynamic modulus regression models},
+  author={Santos, Isadora Guimar{\~a}es dos and Esp{\'\i}ndola, Rog{\'e}rio Pinto and Arag{\~a}o, Francisco Thiago Sacramento and Nascimento, Luis Alberto Herrmann},
+  journal={Mat{\'e}ria (Rio de Janeiro)},
+  volume={28},
+  pages={e20230188},
+  year={2023},
+  publisher={SciELO Brasil}
+}
